# bloggers

./: .env.example  .gitignore  docker-compose.yml  fix_sponsors.py
backend/: .dockerignore  .env.example  Dockerfile  backup.sql  check_db.py  export_for_server.py  pyproject.toml  requirements.txt  robot_deploy.py  seed.py  seed_history.py  test_winners.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  auth.py  bloggers.py  categories.py  contests.py  sponsors.py  votes.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/admin/: layout.js  page.js
frontend/app/admin-login/: page.js
frontend/app/admin/bloggers/: page.js
frontend/app/admin/categories/: page.js
frontend/app/admin/payments/: page.js
frontend/app/admin/settings/: page.js
frontend/app/admin/sponsors/: page.js
frontend/app/admin/users/: page.js
frontend/app/admin/votes/: page.js
frontend/app/blogger/[id]/: page.js
frontend/app/categories/: page.js
frontend/app/components/: AnimatedCounter.js  BloggerCard.js  CountdownTimer.js  Footer.js  Header.js  LanguageSwitcher.js  VoteModal.js
frontend/app/contexts/: LanguageContext.js
frontend/app/leaderboard/: page.js
frontend/app/lib/: api.js  categoryIcons.js  i18n.js  mockData.js
frontend/app/login/: page.js
frontend/app/profile/: page.js
frontend/app/register/: page.js
nginx/: default.conf
