[project]
name = "blogger-awards-backend"
version = "1.0.0"
description = "Blogger Association Voting Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.26.0",
    "pillow>=10.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
]
